# py_experimenter

./: .buildinfo  .gitignore  3rd-party.html  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  LICENCE  LICENSE  README.md  authors.html  changelog.html  cite.html  database_connector.py  genindex.html  help.html  how-to-contribute.html  index.html  installation.html  issues.html  licence.html  license.html  objects.inv  pause.py  py-modindex.html  py_experimenter.py  pyproject.toml  release-version.html  requirements-dev.txt  requirements.txt  run.py  search.html  searchindex.js  setup.py  test_pause.py  usage.html  utils.py  workflow.html
.github/ISSUE_TEMPLATE/: custom.md  issue.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: docs.yml  github-pages.yml  paper-draft-pdf.yml  tests.yml
_sources/: 3rd-party.rst.txt  how-to-contribute.rst.txt  index.rst.txt  installation.rst.txt  license.rst.txt  release-version.rst.txt  usage.md.txt  workflow.md.txt
_sources/autoapi/: index.rst.txt
_sources/examples/: example_conditional_grid.ipynb.txt  example_general_usage.ipynb.txt  example_logtables.ipynb.txt
_sources/sites/: how-to-contribute.md.txt  how-to-contribute.rst.txt
_sources/usage/: database_credential_file.rst.txt  distributed_execution.rst.txt  execution.rst.txt  experiment_configuration_file.rst.txt  index.rst.txt
autoapi/: index.html
autoapi/py_experimenter/: index.html
base_folder/: setup.py
base_folder/py_experimenter/: __init__.py  database_connector.py  utils.py  (+5 more)
config/: database_credentials.cfg  example_config.cfg  example_database_credentials.cfg  example_database_credentials.yml
docs/: _config.yml  index.md
examples/: example_conditional_grid.html  example_conditional_grid.ipynb  example_fill_complex.cfg  example_fill_complex.py  example_fill_from_combination_complex.cfg  example_fill_from_combination_complex.py  example_fill_from_combination_easy.cfg  example_fill_from_combination_easy.py  example_fill_from_combination_svm.cfg  example_fill_from_combination_svm.py  example_fill_from_config.cfg  example_fill_from_config.py  example_fill_with_rows.cfg  example_fill_with_rows.py  example_general_usage.html  example_general_usage.ipynb  example_logtables.html  example_logtables.ipynb  example_pause_and_contiue.html  example_pause_and_contiue.ipynb  example_reset_experiments.cfg  example_reset_experiments.py  example_timestamp_on_result_fields.cfg  example_timestamp_on_result_fields.py  example_use_name.cfg  example_use_name.py  example_with_ranges.cfg  example_with_ranges.py  index.html
paper/: paper-revised.md  paper.bib  paper.md  usage.drawio
py_experimenter/: config.py  database_connector.py  database_connector_lite.py  database_connector_mariadb.py  database_connector_mysql.py  exceptions.py  experiment_status.py  experimenter.py  py_experimenter_exceptions.py  result_processor.py  utils.py
sites/: authors.html  changelog.html  help.html  how-to-contribute.html  installation.html  licence.html  usage.html  workflow.html
test/: test_config.py  test_database_connector.py  test_database_connector_mariadb.py  test_database_connector_mysql.py  test_experimenter.py  test_result_processor.py  test_utils.py
usage/: database_credential_file.html  distributed_execution.html  execution.html  experiment_configuration_file.html  experiment_function.html  index.html  installation.html
(+119 files in other folders)
